Changes by leo