@@ -2,8 +2,7 @@ package fr.networks.ugp.readers;
 
 import org.junit.jupiter.api.Test;
 
-import java.net.MalformedURLException;
-import java.net.URI;
+import java.net.URL;
 import java.net.URISyntaxException;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
@@ -12,20 +11,20 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class URLReaderTest {
   @Test
-  public void simple() throws URISyntaxException {
+  public void simple() throws java.net.MalformedURLException {
     var string = "http://docs.google.com/document/d/1AjTmTtZMehO35vIylUnCvPO2X7mu7iffD0P4Tbwwfwc/edit#";
     var bb = ByteBuffer.allocate(1024);
     var bytes = StandardCharsets.UTF_8.encode(string);
     bb.putInt(bytes.remaining()).put(bytes);
     var sr = new URLReader();
     assertEquals(Reader.ProcessStatus.DONE, sr.process(bb));
-    assertEquals(new URI(string), sr.get());
+    assertEquals(new URL(string), sr.get());
     assertEquals(0, bb.position());
     assertEquals(bb.capacity(), bb.limit());
   }
 
   @Test
-  public void reset() throws URISyntaxException {
+  public void reset() throws java.net.MalformedURLException {
     var string = "http://docs.google.com/document/d/1AjTmTtZMehO35vIylUnCvPO2X7mu7iffD0P4Tbwwfwc/edit#";
     var string2 = "http://google.com";
     var bb = ByteBuffer.allocate(1024);
@@ -34,17 +33,17 @@ public class URLReaderTest {
     bb.putInt(bytes.remaining()).put(bytes).putInt(bytes2.remaining()).put(bytes2);
     var sr = new URLReader();
     assertEquals(Reader.ProcessStatus.DONE, sr.process(bb));
-    assertEquals(new URI(string), sr.get());
+    assertEquals(new URL(string), sr.get());
     assertEquals(bb.capacity(), bb.limit());
     sr.reset();
     assertEquals(Reader.ProcessStatus.DONE, sr.process(bb));
-    assertEquals(new URI(string2), sr.get());
+    assertEquals(new URL(string2), sr.get());
     assertEquals(0, bb.position());
     assertEquals(bb.capacity(), bb.limit());
   }
 
   @Test
-  public void reffil() throws URISyntaxException {
+  public void reffil() throws java.net.MalformedURLException {
     var string = "http://docs.google.com/document/d/1AjTmTtZMehO35vIylUnCvPO2X7mu7iffD0P4Tbwwfwc/edit#";
     var bb = ByteBuffer.allocate(1024);
     var bytes = StandardCharsets.UTF_8.encode(string);
@@ -66,7 +65,7 @@ public class URLReaderTest {
       smallBuffer.clear();
     }
     assertEquals(Reader.ProcessStatus.DONE, status);
-    assertEquals(new URI(string), ur.get());
+    assertEquals(new URL(string), ur.get());
     assertEquals(0, smallBuffer.position());
     assertEquals(smallBuffer.capacity(), smallBuffer.limit());
   }
